overflow issue fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -23,6 +23,9 @@ body{
     height: fit-content;
 }
 
+.root{
+    overflow-x: hidden;
+}
 
 /*=============================================================
 Fonts Css
